<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.winwithjoy.MainActivity" >
 <ViewFlipper
android:id="@+id/flipper1"
android:layout_width="match_parent"
android:layout_height="match_parent" > 
<TableLayout
android:id="@+id/t_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff">
                                                <TableRow
                                                        android:layout_height="wrap_content"
                            android:layout_width="wrap_content">
                            <TextView
                                android:id="@+id/select_action" 
                                android:text="@string/select_action"
                                android:layout_weight="1" 
                                android:textColor="#000000"
                                android:padding="20dip"
                                 android:gravity="center"/>
                            <TextView
                                android:id="@+id/grade_show" 
                                android:text="@string/grade_show"
                                android:layout_weight="1" 
                                android:textColor="#000000"
                                android:padding="20dip" android:gravity="center"/>
                            <TextView
                                android:id="@+id/student_show" 
                                android:text="@string/student_show"
                                android:layout_weight="1" 
                                android:textColor="#000000"
                                android:padding="20dip" android:gravity="center"/>
                            <TextView
                                android:id="@+id/date_show" 
                                android:text="@string/date_show"
                                android:layout_weight="1" 
                                android:textColor="#000000"
                                android:padding="20dip" android:gravity="center"/>
                            <TextView
                                android:id="@+id/marks_show" 
                                android:text="@string/marks_show"
                                android:layout_weight="1" 
                                android:textColor="#000000"
                                android:padding="20dip" android:gravity="center"/>
                        </TableRow>
  </TableLayout>

<RelativeLayout 
        android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
        <EditText
        android:id="@+id/grade_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="129dp"
        android:layout_toRightOf="@+id/btn_plus"
        android:ems="10"
        android:hint="@string/grade_name" />
    <EditText
        android:id="@+id/student_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/grade_name"
        android:layout_below="@id/grade_name"
        android:layout_marginTop="57dp"
        android:ems="10"
        android:hint="@string/student_name" />
    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/student_name"
        android:layout_alignRight="@id/student_name"
        android:layout_below="@id/student_name"
        android:layout_marginTop="78dp"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceLarge"
         />
    <TextView
        android:id="@+id/marks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/date"
        android:layout_alignRight="@id/date"
        android:layout_centerVertical="true"
        android:text="@string/marks"
        android:textAppearance="?android:attr/textAppearanceLarge"
         />
    <Button
        android:id="@+id/btn_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/marks"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="59dp"
        android:text="@string/btn_plus" />
    <Button
        android:id="@+id/btn_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/btn_plus"
        android:layout_alignBottom="@id/btn_plus"
        android:layout_alignLeft="@id/marks"
        android:layout_marginLeft="30dp"
        android:text="@string/btn_minus" />
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/btn_plus"
        android:layout_alignBottom="@id/btn_plus"
        android:layout_alignRight="@+id/btn_cancel"
        android:layout_marginRight="129dp"
        android:text="@string/btn_submit" />
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/btn_submit"
        android:layout_alignBottom="@id/btn_submit"
        android:layout_marginLeft="67dp"
        android:layout_toRightOf="@id/marks"
        android:text="@string/btn_cancel" />
</RelativeLayout>
 </ViewFlipper> 
    </LinearLayout>
